--- a/metadata/com/kingdee/eas/fdc/contract/client/MarketProjectReportFilterUI.ui
+++ b/metadata/com/kingdee/eas/fdc/contract/client/MarketProjectReportFilterUI.ui
@@ -283,9 +283,9 @@
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.MarketProjectReportFilterUI].components.component[kDLabelContainer1].properties.property[boundLabelText].value">
             <lang locale="en_US" value="创建时间" />
-            <lang locale="zh_CN" value="立项审批时间" />
-            <lang locale="zh_HK" value="立項審批時間" />
-            <lang locale="zh_TW" value="立項審批時間" />
+            <lang locale="zh_CN" value="立项审批通过日期" />
+            <lang locale="zh_HK" value="立項審批通過日期" />
+            <lang locale="zh_TW" value="立項審批通過日期" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.MarketProjectReportFilterUI].components.component[kDLabelContainer1].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="true" />
