--- a/metadata/com/kingdee/eas/fdc/contract/client/PayRequestBillEditUI.ui
+++ b/metadata/com/kingdee/eas/fdc/contract/client/PayRequestBillEditUI.ui
@@ -2656,7 +2656,7 @@
             <userDefined>false</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDLabelContainer</classType>
             <isContainer>true</isContainer>
-            <constraints>372,614,270,19,385</constraints>
+            <constraints>8,614,270,19,261</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -3464,6 +3464,13 @@
                     <name>boundLabelUnderline</name>
                     <type>boolean</type>
                     <value>uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[kDLabelContainer8].properties.property[boundLabelUnderline].value</value>
+                    <isMultiLan>false</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+                <property>
+                    <name>visible</name>
+                    <type>boolean</type>
+                    <value>uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[kDLabelContainer8].properties.property[visible].value</value>
                     <isMultiLan>false</isMultiLan>
                     <userDefined>true</userDefined>
                 </property>
@@ -13652,9 +13659,9 @@
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[contpaymentProportion].properties.property[boundLabelText].value">
             <lang locale="en_US" value="null" />
-            <lang locale="zh_CN" value="累计进度款付款比例（%）" />
-            <lang locale="zh_HK" value="累計進度款付款比例（%）" />
-            <lang locale="zh_TW" value="累計進度款付款比例（%）" />
+            <lang locale="zh_CN" value="付款比例（%）" />
+            <lang locale="zh_HK" value="付款比例（%）" />
+            <lang locale="zh_TW" value="付款比例（%）" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[contpaymentProportion].properties.property[boundLabelUnderline].value">
             <lang locale="en_US" value="null" />
@@ -14219,6 +14226,12 @@
             <lang locale="zh_CN" value="true" />
             <lang locale="zh_HK" value="true" />
             <lang locale="zh_TW" value="true" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[kDLabelContainer8].properties.property[visible].value">
+            <lang locale="en_US" value="false" />
+            <lang locale="zh_CN" value="false" />
+            <lang locale="zh_HK" value="false" />
+            <lang locale="zh_TW" value="false" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.contract.client.PayRequestBillEditUI].components.component[kDLabelContainer9].alias">
             <lang locale="en_US" value="null" />
