--- a/metadata/com/kingdee/eas/fdc/invite/client/InviteProjectEditUI.ui
+++ b/metadata/com/kingdee/eas/fdc/invite/client/InviteProjectEditUI.ui
@@ -2766,6 +2766,17 @@
                     <herited>false</herited>
                     <userDefined>true</userDefined>
                 </propertyBinding>
+                <propertyBinding>
+                    <propertyName>inviteType.text</propertyName>
+                    <propertyType>java.lang.Object</propertyType>
+                    <bindingObject>editData</bindingObject>
+                    <bindingField>supplierEntry.supplier.inviteType.name</bindingField>
+                    <fieldType>String</fieldType>
+                    <accessType />
+                    <autoMode>false</autoMode>
+                    <herited>false</herited>
+                    <userDefined>true</userDefined>
+                </propertyBinding>
             </propertyBindings>
             <eventBindings>
                 <eventBinding>
