--- a/metadata/com/kingdee/eas/fdc/tenancy/client/RevDetailReportFilterUI.ui
+++ b/metadata/com/kingdee/eas/fdc/tenancy/client/RevDetailReportFilterUI.ui
@@ -117,7 +117,7 @@
             <userDefined>true</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDCheckBox</classType>
             <isContainer>false</isContainer>
-            <constraints>27,174,140,19</constraints>
+            <constraints>27,176,140,19</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -631,7 +631,7 @@
             <userDefined>true</userDefined>
             <classType>com.kingdee.bos.ctrl.swing.KDCheckBox</classType>
             <isContainer>false</isContainer>
-            <constraints>165,176,140,19</constraints>
+            <constraints>176,176,122,19</constraints>
             <tabIndex>0</tabIndex>
             <herited>false</herited>
             <bimUIObjectPK />
@@ -652,6 +652,41 @@
                     <name>selected</name>
                     <type>boolean</type>
                     <value>uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[chkIsNeedTotal].properties.property[selected].value</value>
+                    <isMultiLan>false</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+            </properties>
+            <parent>
+                <key name="name" value="CustomerQueryPanel" />
+            </parent>
+        </component>
+        <component>
+            <name>cbIsZero</name>
+            <alias>uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].alias</alias>
+            <userDefined>true</userDefined>
+            <classType>com.kingdee.bos.ctrl.swing.KDCheckBox</classType>
+            <isContainer>false</isContainer>
+            <constraints>307,176,140,19</constraints>
+            <tabIndex>0</tabIndex>
+            <herited>false</herited>
+            <bimUIObjectPK />
+            <layoutInfo>
+                <name />
+                <type>XYLayout</type>
+                <value />
+            </layoutInfo>
+            <properties>
+                <property>
+                    <name>text</name>
+                    <type>java.lang.String</type>
+                    <value>uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].properties.property[text].value</value>
+                    <isMultiLan>true</isMultiLan>
+                    <userDefined>true</userDefined>
+                </property>
+                <property>
+                    <name>selected</name>
+                    <type>boolean</type>
+                    <value>uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].properties.property[selected].value</value>
                     <isMultiLan>false</isMultiLan>
                     <userDefined>true</userDefined>
                 </property>
@@ -922,6 +957,24 @@
             <lang locale="zh_CN" value="包含已终止合同" />
             <lang locale="zh_HK" value="包含已終止合同" />
             <lang locale="zh_TW" value="包含已終止合同" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].alias">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="null" />
+            <lang locale="zh_HK" value="null" />
+            <lang locale="zh_TW" value="null" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].properties.property[selected].value">
+            <lang locale="en_US" value="true" />
+            <lang locale="zh_CN" value="true" />
+            <lang locale="zh_HK" value="true" />
+            <lang locale="zh_TW" value="true" />
+        </rs>
+        <rs key="uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[cbIsZero].properties.property[text].value">
+            <lang locale="en_US" value="null" />
+            <lang locale="zh_CN" value="应收为0不显示" />
+            <lang locale="zh_HK" value="應收為0不顯示" />
+            <lang locale="zh_TW" value="應收為0不顯示" />
         </rs>
         <rs key="uiObject[com.kingdee.eas.fdc.tenancy.client.RevDetailReportFilterUI].components.component[chkIsNeedTotal].alias">
             <lang locale="en_US" value="null" />
